web-infras/parser/tests/fixtures/esprima/ES6/yield/yield-generator-default-parameter/output.txt
[SyntaxError]: yield expression can not used in parameter list (1,17)
1|function *g(x = yield){}
 |               ^
